--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.14.0",
     "express-session": "^1.15.1",
     "hbs": "~4.0.1",
+    "moment": "^2.18.1",
     "mongoose": "^4.9.1",
     "mongoose-url-slugs": "^0.2.1",
     "morgan": "~1.7.0",
